<resources>
    <string name="app_name">Twitter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_menu_home">Home</string>
    <string name="text_menu_search">Search</string>
    <string name="text_menu_spaces">Spaces</string>
    <string name="text_menu_notification">Notification</string>
    <string name="text_menu_message">Message</string>
</resources>