<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:checkable="false"
        android:icon="@drawable/home_button"
        android:title="@string/text_menu_home" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search_button"
        android:title="@string/text_menu_search" />
    <item
        android:id="@+id/spacesFragment"
        android:icon="@drawable/icon_mic_not_pressed"
        android:title="@string/text_menu_spaces" />
    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/icon_notification_not_pressed"
        android:title="@string/text_menu_notification" />
    <item
        android:id="@+id/messageFragment"
        android:icon="@drawable/icon_message_not_pressed"
        android:title="@string/text_menu_message" />
</menu>